@@ -89,6 +89,8 @@ cong_editor_area_unknown_tag_instance_init (CongEditorAreaUnknownTag *area_unkno
 	area_unknown_tag->private = g_new0(CongEditorAreaUnknownTagDetails,1);
 }
 
+const gchar*
+cong_ui_get_colour_string(enum CongNodeType type);
 
 /* Exported function definitions: */
 CongEditorArea*
@@ -183,13 +185,7 @@ static void
 render_self (CongEditorArea *area,
 	     const GdkRectangle *widget_rect)
 {
-	switch (cong_editor_area_get_state (area)) {
-	default: break;
-	case CONG_EDITOR_STATE_PREHIGHLIGHT: 
-		cong_editor_area_debug_render_area (area,
-						    cong_editor_widget3_get_test_gc (cong_editor_area_get_widget (area)));
-		break;
-	}
+	cong_editor_area_debug_render_state (area);
 }
 
 static gint
